test/statements/diten/badIndexVar.good
badIndexVar.chpl:1: syntax error: only identifiers or tuples of identifiers are allowed as index expressions
